# SU

1-year/1-semester/C++/2020-10-05-intro/IntroToCpp/: IntroToCpp.sln
1-year/1-semester/C++/2020-10-12-var-types-if-else/VarTypesIfElse/: VarTypesIfElse.sln
1-year/1-semester/C++/2020-10-20-part-1/Part1/: Part1.sln
1-year/1-semester/C++/2020-10-21-homework-1/FIrstHomework/: FIrstHomework.sln
1-year/1-semester/C++/2020-11-14-homework-2/Homework2/: Homework2.sln
1-year/1-semester/C++/2020-12-05-homework-3/Homework3/: Homework3.sln
1-year/1-semester/C++/2021-01-10-homework-4/Homework4/: Homework4.sln
1-year/2-semester/OOP/2021-03-04-intro/OOPIntro/: OOPIntro.sln
1-year/2-semester/OOP/2021-03-05-classes-intro/: 2021-03-05-classes-intro.sln
1-year/2-semester/OOP/2021-03-05-classes-intro/2021-03-05-classes-intro/: 2021-03-05-classes-intro.vcxproj  (+2 more)
1-year/2-semester/OOP/2021-03-09-workshop-homework-1/: 2021-03-09-workshop-homework-1.sln
1-year/2-semester/OOP/homeworks/workshop-homework-3/: CMakeLists.txt  card.cpp  card.hpp  deck.cpp  deck.hpp  duelist.cpp  duelist.hpp  helper_functions.cpp  helper_functions.hpp  magic_card.cpp  magic_card.hpp  main.cpp  monster_card.cpp  monster_card.hpp  pendulum_card.cpp  pendulum_card.hpp
1-year/2-semester/OOP/homeworks/workshop-homework-4/: CMakeLists.txt  Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  Duelist.cpp  Duelist.hpp  HelperFunctions.cpp  HelperFunctions.hpp  MagicCard.cpp  MagicCard.hpp  MonsterCard.cpp  MonsterCard.hpp  PendulumCard.cpp  PendulumCard.hpp  main.cpp
protects/1-year/1-semester/IP-workshop/: README.md
(+396 files in other folders)
