cmake_minimum_required(VERSION 3.19)
project(workshop_homework_3)

set(CMAKE_CXX_STANDARD 11)

add_executable(workshop_homework_3 main.cpp card.cpp card.hpp monster_card.cpp monster_card.hpp magic_card.cpp magic_card.hpp pendulum_card.cpp pendulum_card.hpp deck.cpp deck.hpp duelist.cpp duelist.hpp helper_functions.cpp helper_functions.hpp)