cmake_minimum_required(VERSION 3.19)
project(workshop_homework_4)

set(CMAKE_CXX_STANDARD 11)

add_executable(workshop_homework_4 main.cpp Card.cpp Card.hpp MonsterCard.cpp MonsterCard.hpp MagicCard.cpp MagicCard.hpp PendulumCard.cpp PendulumCard.hpp Deck.cpp Deck.hpp Duelist.cpp Duelist.hpp HelperFunctions.cpp HelperFunctions.hpp)